<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.features.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.features.onboarding.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.features.onboarding.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.features.shoe.ShoeListFragment"
        android:label="@string/shoe_list"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/shoeListFragment" />
        <action
            android:id="@+id/action_logout"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.features.shoe.ShoeDetailFragment"
        android:label="@string/shoe_detail"
        tools:layout="@layout/fragment_shoe_detail">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:launchSingleTop="true"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/shoeListFragment" />
        <argument
            android:name="shoe"
            app:argType="com.udacity.shoestore.features.shoe.Shoe"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.udacity.shoestore.features.about.AboutFragment"
        android:label="@string/about" />
</navigation>