<?xml version="1.0" encoding="utf-8"?>
<!--
Note:
I choose ConstraintLayout because I need to use layout_constraintWidth_max property in Next Button (next_button),
so the button width can be adjusted depends on the device width.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.onboarding.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/lato_bold"
            android:text="@string/instructions"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:text="@string/instructions_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@color/colorAccent"
            android:fontFamily="@font/lato_bold"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_content"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_max="300dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>