<?xml version="1.0" encoding="utf-8"?>
<!--
Note:
I choose ConstraintLayout because I need to use layout_constraintVertical_bias & layout_constraintWidth_max property,
so the view width can be adjusted both position and its width depends on the screen size.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.onboarding.presentation.pages.WelcomeFragment">

    <data>
        <variable
            name="mainViewModel"
            type="com.udacity.shoestore.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/app_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee_inline"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:fontFamily="@font/lato_bold"
            android:text="@string/welcome_to"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/app_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@color/colorAccent"
            android:fontFamily="@font/lato_bold"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_title_text"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_max="300dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>